docs: README → wickra standard; align Java to release 22 (#47)
* docs: bring README to wickra standard; align Java to release 22

README:
- Full badge row (CI / CodeQL / codecov / Scorecard / license / verified)
  instead of three, matching the wickra README.
- Canonical language naming in prose (Rust, Python, Node.js, WASM, C, C++,
  C#, Go, Java, R) — 'Node' -> 'Node.js'.
- Add the standard sections that were missing: Requirements (per-language
  minimums), Contributing, Security, full dual-license text + Contribution
  note, a fuller Disclaimer, and the stars/forks/issues footer.

Java: the binding uses only FFM (stable since Java 22), so pin the pom to
maven.compiler.release 22 (was 25) to match wickra and widen the runtime
floor. mvn test stays green (6 tests).

* docs(wasm): 'WASM binding' not 'WebAssembly binding' (naming convention)

CLAUDE.md naming: WASM is the binding identity in prose; WebAssembly is
reserved for the technology/format. Fix the wasm README and CHANGELOG.